[gd_scene load_steps=4 format=3 uid="uid://bm3djcgnyj5ea"]

[ext_resource type="Texture2D" uid="uid://b80rb2x2uirwm" path="res://main-menu-bg-temp.jpg" id="1_c1krx"]
[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="2_bkgut"]
[ext_resource type="AudioStream" uid="uid://daoh682ouj1x5" path="res://bee..mp3" id="3_dy565"]

[node name="MainMenu" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_c1krx")
expand_mode = 1
script = ExtResource("2_bkgut")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -54.0
offset_right = 166.0
offset_bottom = 2.0
grow_vertical = 0

[node name="CreditsLabel" type="Label" parent="MarginContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 6
text = "Version: Alpha 1.0
Developer & Artist: Teo Welton
Main Menu Music: \"bee.\" by GroovyDominos52
Music Composed by: Merrick Davidson"
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Metrognome"

[node name="StartGameButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitGameButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game
"

[node name="MarginContainer3" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer3/CenterContainer"]
layout_mode = 2
text = "Loading World....."

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dy565")
autoplay = true

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
